feat: christmas lights

--- a/src/pages/christmas-lights/index.css
+++ b/src/pages/christmas-lights/index.css
@@ -1,15 +1,70 @@
 @keyframes animation-red {
-  0% {
-    background-color: red;
-    opacity: 0.1;
+  0%,
+  100% {
+    background-color: rgba(255, 0, 0, 0.1);
   }
   50% {
-    background-color: red;
-    opacity: 0.5;
+    background-color: rgba(255, 0, 0, 1);
   }
+}
+
+@keyframes animation-orange {
+  0%,
   100% {
-    background-color: red;
-    opacity: 1;
+    background-color: rgba(255, 165, 0, 0.1);
+  }
+  50% {
+    background-color: rgba(255, 165, 0, 1);
+  }
+}
+
+@keyframes animation-yellow {
+  0%,
+  100% {
+    background-color: rgba(255, 255, 0, 0.1);
+  }
+  50% {
+    background-color: rgba(255, 255, 0, 1);
+  }
+}
+
+@keyframes animation-green {
+  0%,
+  100% {
+    background-color: rgba(0, 128, 0, 0.1);
+  }
+  50% {
+    background-color: rgba(0, 128, 0, 1);
+  }
+}
+
+@keyframes animation-aqua {
+  0%,
+  100% {
+    background-color: rgba(0, 255, 255, 0.1);
+  }
+  50% {
+    background-color: rgba(0, 255, 255, 1);
+  }
+}
+
+@keyframes animation-blue {
+  0%,
+  100% {
+    background-color: rgba(0, 0, 255, 0.1);
+  }
+  50% {
+    background-color: rgba(0, 0, 255, 1);
+  }
+}
+
+@keyframes animation-purple {
+  0%,
+  100% {
+    background-color: rgba(128, 0, 128, 0.1);
+  }
+  50% {
+    background-color: rgba(128, 0, 128, 1);
   }
 }
 
